--- a/analysis_bill_sampras_summer_job_decision.Rmd
+++ b/analysis_bill_sampras_summer_job_decision.Rmd
@@ -113,13 +113,13 @@ digraph decision_tree {
 
 ```
 
-#### In the book, it's unclear what the chances are that Vanessa will offer a job, just as there are no specified probabilities of Bill securing a job through the school's program
+#### 
 
-#### This R code is designed to help Bill visualize his dilemma comprehensively, yet the ultimate decision hinges on his personal judgment and preferences, as well as additional information such as the success rate of the school's job program.
+#### Node is designed to help Bill visualize his dilemma comprehensively, yet the ultimate decision hinges on his personal judgment and preferences, as well as additional information such as the success rate of the school's job program.
 
 #### Ultimately, Bill's choice will be influenced by his preferences or gut feeling. For those inclined towards a more secure route, accepting John's offer might seem sensible. On the other hand, risk-takers might prefer exploring other options in the decision tree.
 
-#### To make this activity a little more fun, let's consider a hypothetical scenario:
+#### To make this activity a little more fun, let's consider a hypothetical scenario, In the book, it provides some probabilites the chance that Vanessa will offer a job, and Bill also has gathered the information from the Sloan School what the previuse students were offered. 
 
 <br>
 
@@ -127,18 +127,47 @@ digraph decision_tree {
 
 #### [- The expected income: \$12,000]{style="color:blue"}
 
-#### [- The probability of receiving Vanessa's offer: 75%]{style="color:blue"}
+#### [- The probability of receiving Vanessa's offer: 60%]{style="color:blue"}
 
 #### [- The anticipated income: \$14,000]{style="color:blue"}
 
-#### [- The likelihood of obtaining a job through the school's program: 85%]{style="color:blue"}
+#### [- The likelihood of obtaining a job through the school's program: 95%]{style="color:blue"}
 
 #### [- The potential income range: \$12,000 to \$15,000]{style="color:blue"}
 
 ### <br>
 
 ```{r}
-DiagrammeR::grViz("
+# Probabilities and incomes
+prob_john_offer <- 1.0 
+income_john <- 12000
+
+prob_vanessa_offer <- 0.60  
+income_vanessa <- 14000
+
+prob_school_program <- 0.95  
+income_school_program_avg <- (6000 + 21600) / 2
+
+# Calculate expected values
+expected_value_john <- prob_john_offer * income_john
+
+# For Vanessa's path, if she doesn't offer, then Bill goes to the school program
+expected_value_vanessa <- prob_vanessa_offer * income_vanessa + 
+                         (1 - prob_vanessa_offer) * prob_school_program * income_school_program_avg
+
+# For the school program directly (rejecting both John and Vanessa)
+expected_value_school <- prob_school_program * income_school_program_avg
+
+# Print the expected values
+print(expected_value_john)
+print(expected_value_vanessa)
+print(expected_value_school)
+
+```
+
+
+```{r}
+grViz("
 digraph decision_tree {
 
   # Define node styles
@@ -151,16 +180,16 @@ digraph decision_tree {
   # Decision Nodes
   Decision1 [label='Decision 1: Accept John’s offer.\\nProb: 100%\\nExpected: $12,000']
   Decision2 [label='Decision 2: Reject John’s offer.']
-  EventA [label='Event A: Vanessa’s firm offers Bill a job.\\nProb: 75%', shape = ellipse]
-  EventB [label='Event B: Vanessa’s firm does not offer Bill a job.\\nProb: 25%', shape = ellipse]
-  DecisionA1 [label='Decision A1: Accept Vanessa’s offer.\\nExpected: $14,000']
-  DecisionA2 [label='Decision A2: Reject Vanessa’s offer.']
-  Recruiting [label='Look for a job through the school’s program\\nProb: 85%', shape = box3d]
+  EventA [label='Event A: Vanessa’s firm offers Bill a job.\\nProb: 60%', shape = ellipse]
+  EventB [label='Event B: Vanessa’s firm does not offer Bill a job.\\nProb: 40%', shape = ellipse]
+  DecisionA1 [label='Decision A1: Accept Vanessa’s offer.\\nProb: 60%\\nExpected: $14,000']
+  DecisionA2 [label='Decision A2: Reject Vanessa’s offer.\\nLook for a job through the school’s program']
+  Recruiting [label='Engage with the school’s program\\nProb: 95%\\nExpected Range: $6,000 - $21,600', shape = box3d]
 
   # Outcome Nodes
   Outcome1 [label='Outcome: Job with John, $12,000.', shape = plaintext]
-  Outcome2 [label='Outcome: Job with Vanessa, salary unknown.\\nExpected: $13,368.75', shape = plaintext]
-  Outcome3 [label='Outcome: Job through program, salary uncertain.\\nExpected: $11,475', shape = plaintext]
+  Outcome2 [label='Outcome: Job with Vanessa, $13,644\\n(If offered)', shape = plaintext]
+  Outcome3 [label='Outcome: Job through program, $13,110\\n(Probability weighted avg: $(income_school_program_avg))', shape = plaintext]
 
   # Connect nodes with edges
   Start -> Decision1 
@@ -179,7 +208,7 @@ digraph decision_tree {
 
 ```
 
-#### Given these result, the path with the highest expected value is [waiting for Vanessa's offer]{style="color:blue"}, with an expected value of [\$13,368.75.]{style="color:blue"}
+#### Given these result, the path with the highest expected value is [waiting for Vanessa's offer]{style="color:blue"}, with an expected value of [\$13,644.]{style="color:blue"}
 
 #### However, it's important to note that this path also carries more risk, as it relies on the 75% probability of receiving Vanessa's offer. If security is a primary concern, [accepting John's offer]{style="color:blue"} would be the most secure choice, being cool with a lower expected value [\$12,000.]{style="color:blue"}
 
