--- a/analysis_bill_sampras_summer_job_decision.Rmd
+++ b/analysis_bill_sampras_summer_job_decision.Rmd
@@ -109,7 +109,7 @@ digraph decision_tree {
   DecisionA2 -> Recruiting 
   Recruiting -> Outcome3 
 }
-")
+", width = 1600, height = 800)
 
 
 
@@ -205,7 +205,7 @@ digraph decision_tree {
   DecisionA2 -> Recruiting 
   Recruiting -> Outcome3 
 }
-")
+", width = 1600, height = 800)
 
 ```
 
